feat: change btt btn to fixed corner position

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -135,14 +135,14 @@
             </div>
             <!-- End of Product Cards Container -->
 
-            <div class="row">
-                <div class="col mt-3 mb-5 d-flex align-items-center">
-                    <button id="btt-btn" class="ib-button bg-blue text-white weight-bold font-title text-decoration-none mx-auto shadow-sm">BACK TO TOP</button>
-                </div>
-            </div>
-
         </div>
     </div>
+</div>
+
+<div id="btt-btn">
+    <a class="text-dark-grey weight-bold font-title text-decoration-none shadow-sm h-100 w-100 d-flex justify-content-center align-items-center">
+        <i class="fa fa-arrow-up"></i>
+    </a>
 </div>
 
 
