--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -159,9 +159,105 @@
     </div>
 </div>
 
-<div class="container-fluid" id="featured-products-div">
+<!-- Featured Products -->
+<div class="container-fluid ib-container bg-light-grey text-dark-grey px-3 px-md-4 py-5" id="products-div">
+    
+    <div class="row">
 
+        <!-- Title -->
+        <div class="col-12">
+            <h1 class="font-title weight-bold section-title-lrg mb-2 text-center">FEATURED PRODUCTS</h1>
+        </div>
+
+    </div>
+
+    <!-- Product Container -->
+    <div class="row mt-3">
+        <div class="product-container">
+
+            <!-- Product Cards Container -->
+            <div class="row pb-4">
+
+                <!-- Product Card -->
+                {% for product in products %}
+                    {% if product.is_featured %}
+                        <div class="col-md-6 col-lg-4 gy-3">
+                            <div class="card shadow product-card h-100">
+                                <div class="card-category-label mb-1 position-absolute">
+                                    <a href="" class="font-body d-flex text-blue text-decoration-none align-items-center">
+                                        <div class="bg-blue category-icon-circle-sm me-1">
+                                            <i class="fas fa-box-archive text-ib-light text-center"></i>
+                                        </div>
+                                        <p class="font-title weight-semibold section-title text-uppercase">COURSES</p>
+                                    </a>
+                                </div>
+
+                                <!-- Product Image -->
+                                {% if product.image %}
+                                    <a class="card-image-link" href="">
+                                        <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                    </a>
+                                {% else %}
+                                    <a href="">
+                                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}no_image.jpg" alt="{{ product.name }}">
+                                    </a>
+                                {% endif %}
+
+                                <!-- Product Name -->
+                                <div class="card-body bg-ib-white pb-2">
+                                    <h5 class="text-uppercase text-center font-body weight-semibold">{{ product.name }}</h5>
+                                </div>
+
+                                <!-- Card Footer - Rating, Price & Edit/Delete -->
+                                <div class="card-footer pt-0 pb-3">
+
+                                    <div class="row">
+                                        <div class="col-6 pe-0">
+                                            <div class="row">
+
+                                                <!-- Product Rating -->
+                                                <div class="card-rating-div pe-0">
+                                                    <span class="rating-hex-small rating-hex-{% if rating >= 1 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                    <span class="rating-hex-small rating-hex-{% if rating >= 2 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                    <span class="rating-hex-small rating-hex-{% if rating >= 3 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                    <span class="rating-hex-small rating-hex-{% if rating >= 4 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                    <span class="rating-hex-small me-2 rating-hex-{% if rating >= 5 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                    <p class=" d-inline font-body mt-n2 text-nowrap">0 REVIEWS</p>
+                                                </div>
+                                            </div>
+
+                                            <div class="row">
+                                                <!-- Product EDIT / DELETE Buttons -->
+                                                {% if request.user.is_superuser %}
+                                                    <div class="card-edit-delete-div mt-2 gy-3">
+                                                        <a href="" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
+                                                        <a href="" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>
+                                                    </div>
+                                                {% endif %}
+                                            </div>
+                                        </div>
+
+                                        <div class="col-6 ps-0 mt-auto d-flex justify-content-end">
+                                            
+                                            <!-- Product Price -->
+                                            <div class=""><p class="card-price weight-semibold">£{{ product.price }}</p></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+                <!-- End of Product Card -->
+            </div>
+            <!-- End of Product Cards Container -->
+
+
+        </div>
+        
+    </div>
 </div>
+
 
 
 
