test: add products test_models

--- a/templates/includes/lower-nav.html
+++ b/templates/includes/lower-nav.html
@@ -3,7 +3,7 @@
     <ul class="navbar-nav w-auto mx-auto">
 
         <li class="nav-item">
-            <a class="font-body weight-semibold nav-link lower-nav-link" href="#">
+            <a class="font-body weight-semibold nav-link lower-nav-link" href="{% url 'home' %}">
                 <p class="text-dark lower-nav-link-text">HOME</p>
             </a>
         </li>
