--- a/static/css/style.css
+++ b/static/css/style.css
@@ -172,6 +172,14 @@ html {
 
 /* Recurring Elements */
 
+.shadow {
+    box-shadow: 0 0.2rem 0.5rem rgba(0,0,0,.25)!important;
+}
+
+.shadow-sm {
+    box-shadow: 0 0.1rem 0.2rem rgba(0,0,0,.35)!important;
+}
+
 .ib-lh-1 {
     line-height: 0.8;
 }
