--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -101,12 +101,12 @@
 
                                             <!-- Product Rating -->
                                             <div class="rating-div pe-0">
-                                                <span class="rating-hex-small rating-hex-{% if rating >= 1 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <span class="rating-hex-small rating-hex-{% if rating >= 2 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <span class="rating-hex-small rating-hex-{% if rating >= 3 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <span class="rating-hex-small rating-hex-{% if rating >= 4 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <span class="rating-hex-small me-2 rating-hex-{% if rating >= 5 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <p class=" d-inline font-body mt-n2 text-nowrap">0 REVIEWS</p>
+                                                <span class="rating-hex-small rating-hex-{% if product.average_rating >= 1 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                <span class="rating-hex-small rating-hex-{% if product.average_rating >= 2 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                <span class="rating-hex-small rating-hex-{% if product.average_rating >= 3 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                <span class="rating-hex-small rating-hex-{% if product.average_rating >= 4 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                <span class="rating-hex-small me-2 rating-hex-{% if product.average_rating >= 5 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                <p class=" d-inline font-body mt-n2 text-nowrap">{{ product.review_count }} REVIEWS</p>
                                             </div>
                                         </div>
 
