--- a/static/css/style.css
+++ b/static/css/style.css
@@ -994,6 +994,14 @@ button {
     font-size: 24px;
 }
 
+.review-container {
+    border-radius: 2px;
+}
+
+.review-title {
+    font-size: 24px;
+}
+
 
 
 
