test: add test_views for product_details

--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,7 @@
                 </a>
             </div>
 
-            <!-- Search -->
+            <!-- Search Box -->
             <div class="col-12 col-lg-4 my-auto">
                 <form method="GET" action="">
                     <div class="ib-search-box">
