--- a/templates/includes/lower-nav.html
+++ b/templates/includes/lower-nav.html
@@ -21,7 +21,7 @@
                         <p class="text-dark ms-2 lower-nav-link-text">ALL PRODUCTS</p>
                     </div>
                 </a>
-                <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
+                <a class="font-body nav-link lower-nav-link dropdown-item" href="{% url 'products' %}?category=the_bees">
                     <div>
                         <div class="category-icon-circle bg-ib-dark">
                             <i class="fas fa-bug text-ib-light text-center"></i>
@@ -29,7 +29,7 @@
                         <p class="text-dark ms-2 lower-nav-link-text">THE BEES</p>
                     </div>
                 </a>
-                <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
+                <a class="font-body nav-link lower-nav-link dropdown-item" href="{% url 'products' %}?category=the_kit">
                     <div>
                         <div class="category-icon-circle bg-dark">
                             <i class="fas fa-box-archive text-ib-light text-center"></i>
@@ -37,7 +37,7 @@
                         <p class="text-dark ms-2 lower-nav-link-text">THE KIT</p>
                     </div>
                 </a>
-                <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
+                <a class="font-body nav-link lower-nav-link dropdown-item" href="{% url 'products' %}?category=courses">
                     <div>
                         <div class="category-icon-circle bg-ib-dark">
                             <i class="fas fa-graduation-cap text-ib-light text-center"></i>
@@ -45,7 +45,7 @@
                         <p class="text-dark ms-2 lower-nav-link-text">COURSES</p>
                     </div>
                 </a>
-                <a class="font-body nav-link lower-nav-link dropdown-item" href="#">
+                <a class="font-body nav-link lower-nav-link dropdown-item" href="{% url 'products' %}?category=produce">
                     <div>
                         <div class="category-icon-circle bg-ib-dark">
                             <i class="fas fa-jar text-ib-light text-center"></i>
