--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-{% endblock %}
+{% block extra_title %}- Home{% endblock %}
 
 {% block content %}
 
