--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,8 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-{% endblock %}
+{% block extra_title %}- Products{% endblock %}
 
 {% block content %}
 
