--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     {% block extra_meta %}
     {% endblock %}
 
-    <title>Island Bees - {% block extra_title %}{% endblock %}</title>
+    <title>Island Bees {% block extra_title %}{% endblock %}</title>
 
     {% block corecss %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
