feat: add page meta extra blocks

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,6 +3,10 @@
 
 {% block extra_title %}- Home{% endblock %}
 
+{% block extra_meta %}
+    <meta name="description" content="WELCOME TO ISLAND BEES! We cater to all your bees' needs. Everything we sell is either hand made by us or sourced locally to our base on the Isle of Anglesey. We also run regular beekeeping courses for the bee curious! And of course you can also buy our award-winning honey and other produce made by our hard-working bees (with a little help from us).">
+{% endblock %}
+
 {% block content %}
 
 <!-- Hero Div - Image, Hexes & SHOP NOW button -->
