--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,6 @@
 {% load static %}
 
 <!doctype html>
-
 <html lang="en">
 
 <head>
@@ -155,12 +154,7 @@
         <div class="message-container"></div>
     {% endif %}
 
-
-
-    <!-- CHECK IF ALL THESE BLOCKS ARE BEING USED!!!!! -->
-    {% block page_header %}
-    {% endblock %}
-
+    <!-- Header to push content below nav -->
     <div class="container header-container">
         <div class="row">
             <div class="col"></div>
