--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -3,6 +3,10 @@
 
 {% block extra_title %}- {{ product.name }}{% endblock %}
 
+{% block extra_meta %}
+    <meta name="description" content="WELCOME TO ISLAND BEES! {{ product.name }}: {{ product.description }}">
+{% endblock %}
+
 {% block content %}
 
 <!-- Product Detail Page Contents -->
