--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -74,7 +74,7 @@
                     <div class="col-md-6 col-lg-4 gy-3">
                         <div class="card shadow product-card h-100">
                             <div class="card-category-label mb-1 position-absolute">
-                                <a href="" class="font-body d-flex text-blue text-decoration-none align-items-center">
+                                <a href="{% url 'products' %}?category={{ product.category.name }}" class="font-body d-flex text-blue text-decoration-none align-items-center">
                                     <div class="bg-blue category-icon-circle-sm me-1">
                                         <i class="fas fa-{% if product.category.name == 'the_bees' %}bug{% elif product.category.name == 'the_kit' %}box-archive{% elif product.category.name == 'courses' %}graduation-cap{% elif product.category.name == 'produce' %}jar{% else %}shop{% endif %} text-ib-light text-center"></i>
                                     </div>
